Improved authenticated user behavior on navbar and on dashboard content. And navbar now is fixed on mobile.

--- a/resources/assets/sass/dashboard/auth.scss
+++ b/resources/assets/sass/dashboard/auth.scss
@@ -1,29 +1,111 @@
 &__auth {
-  background-color: $dashboard-nav-color-dark;
-  padding: 0.2rem 0.1rem 0.1rem;
+  background-color: $auth-color;
+  padding: 0.3rem 0;
 
-  &-avatar {
-    height: 3rem;
-    width: 3rem;
+  @extend .d-flex;
+  @extend .position-relative;
 
-    @extend %dashboard-user-avatar;
+  @include media-breakpoint-up(md) {
+    flex-direction: column !important;
+    padding: 0.2rem 0.1rem 0.1rem;
+    cursor: pointer;
+  }
 
-    .img {
-      border-color: darken($dashboard-nav-color-dark, 10%);
+  $auth: &;
+  &:hover {
+    #{$auth}-popover {
+      width: 15rem;
+      opacity: 1;
+    }
+
+    #{$auth}-message,
+    #{$auth}-logout {
+      opacity: 1;
     }
   }
 
-  &-name {
-    border-color: darken($dashboard-nav-color-dark, 5%) !important;
+  &-avatar {
+    height: 3rem;
+    flex: 0 0 20%;
 
-    @extend %dashboard-user-text;
+    @extend %dashboard-user-avatar;
+
+    @include media-breakpoint-up(md) {
+      flex-basis: 100%;
+    }
+
+    .img {
+      border-color: $auth-avatar-border-color;
+      width: 3rem;
+      max-width: 3rem;
+      height: 100%;
+      max-height: 100%;
+    }
+  }
+
+  &-popover {
+    flex: 0 0 80%;
+
+    @extend .d-flex;
+    @extend .align-items-center;
+
+    @include media-breakpoint-up(md) {
+      background-color: $auth-color;
+      flex-basis: auto;
+      width: 0;
+      height: 100%;
+      opacity: 0;
+      overflow: hidden;
+      transition: width .3s ease-out .6s, opacity .3s ease-out .6s;
+      position: absolute;
+      z-index: 1;
+      left: 100%;
+      top: 0;
+    }
+  }
+
+  %popover-items {
+    @include media-breakpoint-up(md) {
+      opacity: 0;
+      transition: opacity .3s .5s;
+    }
+  }
+
+  &-message {
+    flex: 0 0 80%;
+
+    @extend .text-center;
+    @extend .text-white;
+    @extend %popover-items;
+
+    @include media-breakpoint-up(md) {
+      flex-basis: 13rem;
+    }
   }
 
   &-logout {
-    background-color: darken($dashboard-nav-color-dark, 5%);
-    border: 0;
+    flex: 0 0 20%;
 
-    @extend .w-100;
-    @extend .text-white;
+    @extend .text-center;
+    @extend %popover-items;
+
+    @include media-breakpoint-up(md) {
+      flex-basis: 2rem;
+      height: 100%;
+    }
+
+    &-btn {
+      background-color: $auth-border-color;
+      border: 0;
+      height: 2rem;
+
+      @extend .text-white;
+
+      @include media-breakpoint-up(md) {
+        padding: 1px 6px;
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 }
