--- a/resources/assets/sass/dashboard/navbar.scss
+++ b/resources/assets/sass/dashboard/navbar.scss
@@ -7,6 +7,7 @@
     padding-top: 0;
     padding-right: 0.2rem;
     padding-left: 0.2rem;
+    position: static;
   }
 
   & * {
